--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,2 +1,19 @@
+runtime: container
+startCommand:
+  type: http
+  configSchema:
+    type: object
+    required:
+      - stripe_api_key
+    properties:
+      stripe_api_key:
+        type: string
+        description: Your Stripe secret API key (sk_live_... or sk_test_...)
+      stripe_api_version:
+        type: string
+        description: Optional Stripe API version override (e.g., 2024-06-20)
+      default_stripe_account:
+        type: string
+        description: Optional default connected account ID
 build:
   dockerBuildPath: ./
